<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">sdk</string>
    <string name="audit_mode_warning_content">%1$s 该模式仅限内部人员测试使用，此功能可能会上报您的个人信息（包括但不限于IMEI）用于系统功能测试，请谨慎选择是否进入。</string>
    <string name="audit_mode_warning_title">注意</string>
    <string name="beauty3d_add_hint">Add 3D Face Beauty</string>
    <string name="beauty3d_beauty_face">3D Face Beauty</string>
    <string name="beauty3d_cancel">Cancel</string>
    <string name="beauty3d_cheekbones">Cheekbone</string>
    <string name="beauty3d_chin">Chin</string>
    <string name="beauty3d_continue_turn_to_left">Please continue turning your head left</string>
    <string name="beauty3d_continue_turn_to_right">Please continue turning your head right</string>
    <string name="beauty3d_customize_face">Custom Beautifying</string>
    <string name="beauty3d_customize_hint">Tap your facial features for minor adjustments</string>
    <string name="beauty3d_customize_success">Custom 3D Beautified Look Completed</string>
    <string name="beauty3d_eye">Big Eyes</string>
    <string name="beauty3d_face_blurred">"Blurred face image. Please don't sway your head when recording"</string>
    <string name="beauty3d_face_change">Face has changed</string>
    <string name="beauty3d_face_closer">Please keep your face and the phone closer</string>
    <string name="beauty3d_face_edit_title">Facial Analysis</string>
    <string name="beauty3d_face_scan">Face Scan</string>
    <string name="beauty3d_face_size">Face Shape</string>
    <string name="beauty3d_face_style_delicate">Delicacy</string>
    <string name="beauty3d_face_style_lolita">Loli</string>
    <string name="beauty3d_face_style_mode">Model</string>
    <string name="beauty3d_face_style_natural">Natural</string>
    <string name="beauty3d_give_up_customize_face">Discard Custom 3D Beautified Look</string>
    <string name="beauty3d_goose_face">Oval Face</string>
    <string name="beauty3d_guide_content">Smart face scanning can easily 3D beautify your face</string>
    <string name="beauty3d_high_cheekbone">Higher</string>
    <string name="beauty3d_keep_face_forward">Please align your front face with the frame</string>
    <string name="beauty3d_keep_face_in_cicle">Your face is out of the frame. Please keep your face inside it</string>
    <string name="beauty3d_long_chin">Longer</string>
    <string name="beauty3d_long_face">Longer Face</string>
    <string name="beauty3d_narrow_nose">Narrower Nose</string>
    <string name="beauty3d_no_face">Face detection failed</string>
    <string name="beauty3d_no_show_teeth">"Please don't show your teeth"</string>
    <string name="beauty3d_nose">Nose</string>
    <string name="beauty3d_orientatin_error_keep_vertical">Incorrect phone direction. Please keep it in the portrait mode</string>
    <string name="beauty3d_over_max_frame_exit">Maximum allowed number of frames exceeded. Scanning ended.</string>
    <string name="beauty3d_pelease_remove_glasses">Please remove your glasses</string>
    <string name="beauty3d_program_error_exit">Program error. Scanning ended.</string>
    <string name="beauty3d_rescan">Scan Again</string>
    <string name="beauty3d_round_face">Round Face</string>
    <string name="beauty3d_save">Save</string>
    <string name="beauty3d_save_face_failed">Failed to keep facial data</string>
    <string name="beauty3d_scan_content">Remove your glasses, and make sure your hair does not cover any part of your face. Place your front face inside the frame, and slowly rotate your head until scanning finishes.</string>
    <string name="beauty3d_short_chin">Shorter</string>
    <string name="beauty3d_skip">Skip</string>
    <string name="beauty3d_small_eye">Smaller Eyes</string>
    <string name="beauty3d_square_face">Square Face</string>
    <string name="beauty3d_standard_cheekbone">Standard</string>
    <string name="beauty3d_standard_chin">Standard</string>
    <string name="beauty3d_standard_eye">Standard Eyes</string>
    <string name="beauty3d_standard_nose">Standard Nose</string>
    <string name="beauty3d_start_scan">Scan Now</string>
    <string name="beauty3d_title">3D Face Beauty</string>
    <string name="beauty3d_turn_to_left">Please turn left</string>
    <string name="beauty3d_turn_to_right">Please turn right</string>
    <string name="beauty3d_turn_to_up">Please raise your head</string>
    <string name="beauty3d_wait_scan_complete">Creating 3D face. Keep facing the camera</string>
    <string name="beauty3d_width_nose">Wider Nose</string>
    <string name="byteShort"> B</string>
    <string name="byteSpeed"> B/s</string>
    <string name="camera_ai_scene_default_value">on</string>
    <string name="camera_ai_scene_title">AI Scene Recognition</string>
    <string name="camera_ai_scn_backlight">Backlight</string>
    <string name="camera_ai_scn_beach">Beach</string>
    <string name="camera_ai_scn_bluesky">Blue Sky</string>
    <string name="camera_ai_scn_cat">Kitty</string>
    <string name="camera_ai_scn_dog">Puppy</string>
    <string name="camera_ai_scn_firework">Fireworks</string>
    <string name="camera_ai_scn_flower">Bouquet</string>
    <string name="camera_ai_scn_gourmet">Food</string>
    <string name="camera_ai_scn_grass">Grass</string>
    <string name="camera_ai_scn_indoor">Indoor</string>
    <string name="camera_ai_scn_infant">Infant</string>
    <string name="camera_ai_scn_landscape">Scene</string>
    <string name="camera_ai_scn_microspur">Macro Lens</string>
    <string name="camera_ai_scn_moire">Moire</string>
    <string name="camera_ai_scn_multi_portrait">Group Photo</string>
    <string name="camera_ai_scn_night">Night</string>
    <string name="camera_assistant_line_title">Grid</string>
    <string name="camera_description_high_resolution">Ultra HD</string>
    <string name="camera_description_switch_dual_camera">Dual Camera Switching</string>
    <string name="camera_filter_menu_default_value">off</string>
    <string name="camera_filter_title">Filter</string>
    <string name="camera_fingerprint_shutter_title">Fingerprint Shooting</string>
    <string name="camera_flash_mode_default_value">off</string>
    <string name="camera_flash_mode_title">Flash Mode</string>
    <string name="camera_flash_mode_video_default_value">off</string>
    <string name="camera_format_default_value">jpg</string>
    <string name="camera_gesture_shutter_title">Use Gestures to Take Photo</string>
    <string name="camera_group_type_icon_item">3</string>
    <string name="camera_group_type_menu_expandable">2</string>
    <string name="camera_group_type_share_resource">1</string>
    <string name="camera_hdr_title">HDR Function</string>
    <string name="camera_high_resolution_default_value">off</string>
    <string name="camera_location_title">Location</string>
    <string name="camera_mirror_default_value">off</string>
    <string name="camera_mirror_title">Flip Selfie</string>
    <string name="camera_more_title">More</string>
    <string name="camera_photo_ratio_default_value">standard</string>
    <string name="camera_pi_title_realme">Chroma Boost</string>
    <string name="camera_portrait_new_style_default_value">off</string>
    <string name="camera_portrait_new_style_title">portrait new style</string>
    <string name="camera_professional_raw_title">Save in RAW format under Professional mode</string>
    <string name="camera_raw_title">RAW</string>
    <string name="camera_setting_common">GENERAL</string>
    <string name="camera_setting_default_value">off</string>
    <string name="camera_setting_name">Settings</string>
    <string name="camera_setting_photo">PHOTO</string>
    <string name="camera_setting_restore_default">Restore to Defaults</string>
    <string name="camera_setting_submenu_photo_ratio">Frame</string>
    <string name="camera_setting_submenu_timer">Timer</string>
    <string name="camera_setting_title">Setting</string>
    <string name="camera_setting_video">VIDEO</string>
    <string name="camera_setting_video_ratio">Video Resolution</string>
    <string name="camera_shutter_mode_default_value">normal</string>
    <string name="camera_shutter_sound_title">Shutter Sound</string>
    <string name="camera_slogan_default_value">off</string>
    <string name="camera_slogan_device">Phone Model</string>
    <string name="camera_slogan_location">Location</string>
    <string name="camera_slogan_location_tip">Requires access to network and location services.</string>
    <string name="camera_slogan_owner_summary_v7">Automatically added after taking a photo. Up to 20 characters are allowed.</string>
    <string name="camera_slogan_time">Date &amp; Time</string>
    <string name="camera_slogan_title">Watermark</string>
    <string name="camera_slow_video_default_value">240FPS</string>
    <string name="camera_storage_footer_summary">Photos and videos saved on SD card will not be synced to cloud or other phones.</string>
    <string name="camera_storage_title">Save to SD Card Preferred</string>
    <string name="camera_switch_default_value">camera_main</string>
    <string name="camera_switch_dual_camera_default_value">off</string>
    <string name="camera_switch_title">Switch Camera</string>
    <string name="camera_tap_shutter_title">Touch to Take Photo</string>
    <string name="camera_torch_mode_default_value">off</string>
    <string name="camera_torch_mode_title">Fill Light Mode</string>
    <string name="camera_video_codec_default_value">H264</string>
    <string name="camera_video_codec_title">Video Encoding</string>
    <string name="camera_video_size_title">Standard Video Quality</string>
    <string name="camera_vivid_effect_off">off</string>
    <string name="camera_vivid_effect_title">Vivid</string>
    <string name="camera_volume_key_function_default_value">shutter</string>
    <string name="camera_volume_key_function_title">Volume Button</string>
    <string name="slogan_owner_name">Author</string>
    <string name="ultra_wide_angle_default_value">off</string>
    <string name="ultra_wide_angle_title">ultra wide angle</string>
    <string name="video_filter_default_value">off</string>
    <string name="video_filter_title">video filter</string>
</resources>