<?xml version="1.0" encoding="utf-8"?>
<PreferenceMenuOptionGroup xmlns:camera="http://schemas.android.com/apk/res-auto">
    <PreferenceMenuOptionInfo camera:default_value="@string/camera_flash_mode_default_value" camera:groupType="@string/camera_group_type_share_resource" camera:icons="@array/flash_mode_icons" camera:key="pref_camera_flashmode_key" camera:title="@string/camera_flash_mode_title" camera:valueNames="@array/flash_mode_names" camera:values="@array/flash_mode_values" />
    <PreferenceMenuOptionInfo camera:icons="@array/hdr_icons" camera:key="pref_camera_hdr_mode_key" camera:title="@string/camera_hdr_title" camera:valueNames="@array/hdr_names" camera:values="@array/hdr_values" />
    <PreferenceMenuOptionInfo camera:defaultValue="@string/ultra_wide_angle_default_value" camera:icons="@array/ultra_wide_angle_icons" camera:key="pref_none_sat_ultra_wide_angle_key" camera:onoff="true" camera:title="@string/ultra_wide_angle_title" camera:valueNames="@array/ultra_wide_angle_names" camera:values="@array/ultra_wide_angle_values" />
    <PreferenceMenuOptionInfo camera:icons="@array/pi_icons" camera:key="pref_camera_pi_mode_key" camera:onoff="true" camera:title="@string/camera_pi_title_realme" camera:valueNames="@array/pi_names" camera:values="@array/pi_values" />
    <PreferenceMenuOptionInfo camera:default_value="@string/camera_vivid_effect_off" camera:icons="@array/vivid_icons" camera:key="pref_camera_vivid_effect_key" camera:onoff="true" camera:title="@string/camera_vivid_effect_title" camera:valueNames="@array/vivid_names" camera:values="@array/vivid_values" />
    <PreferenceMenuOptionInfo camera:default_value="@string/camera_switch_default_value" camera:expandIcon="@drawable/camera_switch_icon" camera:groupType="@string/camera_group_type_icon_item" camera:icons="@array/switch_camera_icons" camera:key="pref_switch_camera_key" camera:title="@string/camera_switch_title" camera:unfoldIcons="@array/switch_camera_highlight_icons" camera:valueNames="@array/switch_camera_names" camera:values="@array/switch_camera_values" />
    <PreferenceMenuOptionInfo camera:default_value="@string/camera_setting_default_value" camera:icons="@array/setting_icons" camera:key="pref_setting_key" camera:onoff="true" camera:title="@string/camera_setting_title" camera:valueNames="@array/setting_names" camera:values="@array/setting_values" />
    <PreferenceMenuOptionInfo camera:default_value="@string/camera_setting_default_value" camera:icons="@array/more_icons" camera:key="pref_subsetting_key" camera:onoff="true" camera:title="@string/camera_more_title" camera:valueNames="@array/more_names" camera:values="@array/more_values" />
    <PreferenceMenuOptionInfo camera:default_value="@string/camera_flash_mode_video_default_value" camera:groupType="@string/camera_group_type_share_resource" camera:icons="@array/video_flash_mode_icons" camera:key="pref_camera_videoflashmode_key" camera:title="@string/camera_flash_mode_title" camera:valueNames="@array/video_flash_mode_names" camera:values="@array/video_flash_mode_values" />
    <PreferenceMenuOptionInfo camera:default_value="@string/camera_torch_mode_default_value" camera:groupType="@string/camera_group_type_share_resource" camera:icons="@array/torch_mode_icons" camera:key="pref_camera_torch_mode_key" camera:title="@string/camera_torch_mode_title" camera:valueNames="@array/torch_mode_names" camera:values="@array/torch_mode_values" />
    <PreferenceMenuOptionInfo camera:default_value="@string/camera_slow_video_default_value" camera:expandIcon="@drawable/menu_slowvideo_fps_expand_icon" camera:groupType="@string/camera_group_type_icon_item" camera:icons="@array/slow_video_fps_icons" camera:key="pref_slow_video_frame_key" camera:title="@string/camera_video_size_title" camera:unfoldIcons="@array/slow_video_fps_highlight_icons" camera:valueNames="@array/slow_video_fps_names" camera:values="@array/slow_video_fps_values" />
    <PreferenceMenuOptionInfo camera:default_value="@string/camera_format_default_value" camera:icons="@array/raw_icons" camera:key="pref_raw_key" camera:onoff="true" camera:title="@string/camera_raw_title" camera:valueNames="@array/raw_names" camera:values="@array/raw_names" />
    <PreferenceMenuOptionInfo camera:default_value="@string/camera_high_resolution_default_value" camera:icons="@array/high_resulution_icons" camera:key="pref_high_resolution_key" camera:onoff="true" camera:title="@string/camera_description_high_resolution" camera:valueNames="@array/high_resulution_names" camera:values="@array/high_resulution_names" />
    <PreferenceMenuOptionInfo camera:default_value="@string/camera_switch_dual_camera_default_value" camera:icons="@array/switch_dual_camera_icons" camera:key="pref_switch_dual_camera_key" camera:onoff="true" camera:title="@string/camera_description_switch_dual_camera" camera:valueNames="@array/switch_dual_camera_names" camera:values="@array/switch_dual_camera_names" />
    <PreferenceMenuOptionInfo camera:default_value="@string/camera_filter_menu_default_value" camera:groupType="@string/camera_group_type_menu_expandable" camera:icons="@array/filter_icons" camera:key="pref_filter_menu" camera:title="@string/camera_filter_title" camera:valueNames="@array/filter_names" camera:values="@array/filter_values" />
    <PreferenceMenuOptionInfo camera:default_value="@string/video_filter_default_value" camera:groupType="@string/camera_group_type_menu_expandable" camera:icons="@array/video_filter_icons" camera:key="pref_video_filter_menu" camera:title="@string/video_filter_title" camera:valueNames="@array/video_filter_names" camera:values="@array/filter_values" />
    <PreferenceMenuOptionInfo camera:default_value="@string/camera_portrait_new_style_default_value" camera:groupType="@string/camera_group_type_menu_expandable" camera:icons="@array/portrait_new_style_icons" camera:key="pref_portrait_new_style_menu" camera:title="@string/camera_portrait_new_style_title" camera:valueNames="@array/portrait_new_style_names" camera:values="@array/portrait_new_style_values" />
    <PreferenceMenuOptionInfo camera:defaultValue="@string/camera_photo_ratio_default_value" camera:icons="@array/scale_icons" camera:key="pref_camera_photo_ratio_key" camera:onoff="true" camera:title="@string/camera_setting_submenu_photo_ratio" camera:valueNames="@array/icon_scales" camera:values="@array/photo_ratio_values" />
    <PreferenceMenuOptionInfo camera:defaultValue="@string/camera_shutter_mode_default_value" camera:icons="@array/timer_icons" camera:key="pref_camera_timer_shutter_key" camera:onoff="true" camera:title="@string/camera_setting_submenu_timer" camera:valueNames="@array/icon_timers" camera:values="@array/timer_shutter_values" />
</PreferenceMenuOptionGroup>