<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen android:title="@string/camera_setting_name" android:key="camera_setting_menu_root_preference"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:coloros="http://schemas.android.com/apk/res-auto" xmlns:camera="http://schemas.android.com/apk/res-auto">
    <androidx.preference.Preference android:layout="@layout/color_preference_header" android:selectable="false" />
    <com.color.support.preference.ColorPreferenceCategory android:title="@string/camera_setting_common" android:key="pref_common_function" camera:isFirstCategory="true">
        <com.color.support.preference.ColorListPreference android:persistent="true" android:entries="@array/volume_key_function_names" android:title="@string/camera_volume_key_function_title" android:selectable="true" android:key="pref_volume_key_function_key" android:defaultValue="@string/camera_volume_key_function_default_value" android:dialogTitle="@string/camera_volume_key_function_title" android:entryValues="@array/volume_key_function_values" />
        <com.android.ui.menu.CameraSwitchPreference android:title="@string/camera_fingerprint_shutter_title" android:key="pref_camera_fingerprint_shutter_key" android:defaultValue="true" />
        <com.android.ui.menu.CameraSwitchPreference android:title="@string/camera_shutter_sound_title" android:key="pref_camera_sound_key" android:defaultValue="true" />
        <com.android.ui.menu.CameraSwitchPreference android:title="@string/camera_location_title" android:key="pref_camera_recordlocation_key" android:defaultValue="true" />
        <com.android.ui.menu.CameraSwitchPreference android:title="@string/camera_mirror_title" android:key="pref_mirror_key" android:defaultValue="@string/camera_mirror_default_value" />
        <com.android.ui.menu.CameraSwitchPreference android:title="@string/camera_storage_title" android:key="pref_camera_storage_key" android:summary="@string/camera_storage_footer_summary" android:defaultValue="false" />
    </com.color.support.preference.ColorPreferenceCategory>
    <com.color.support.preference.ColorPreferenceCategory android:title="@string/camera_setting_photo" android:key="pref_capture_function" camera:isFirstCategory="false">
        <com.android.ui.menu.CameraSwitchPreference android:title="@string/camera_tap_shutter_title" android:key="pref_camera_tap_shutter_key" android:defaultValue="false" />
        <com.android.ui.menu.CameraSwitchPreference android:title="@string/camera_gesture_shutter_title" android:key="pref_camera_gesture_shutter_key" android:defaultValue="false" />
        <com.android.ui.menu.CameraSwitchPreference android:title="@string/camera_assistant_line_title" android:key="pref_camera_assistant_line_key" android:defaultValue="false" />
        <com.android.ui.menu.CameraSwitchPreference android:title="@string/camera_ai_scene_title" android:key="pref_ai_scene_key" android:defaultValue="true" />
        <com.color.support.preference.ColorJumpPreference android:persistent="false" android:title="@string/camera_slogan_title" android:selectable="true" android:key="pref_photo_slogan_key" />
        <com.android.ui.menu.CameraSwitchPreference android:title="@string/camera_professional_raw_title" android:key="pref_raw_key" android:defaultValue="false" />
    </com.color.support.preference.ColorPreferenceCategory>
    <com.color.support.preference.ColorPreferenceCategory android:title="@string/camera_setting_video" android:key="pref_video_function" camera:isFirstCategory="false">
        <com.color.support.preference.ColorJumpPreference android:title="@string/camera_setting_video_ratio" android:key="pref_video_ratio_key" />
        <com.oppo.camera.ui.menu.setting.CameraCustomListPreference android:persistent="true" android:entries="@array/video_codec_names" android:title="@string/camera_video_codec_title" android:key="pref_video_codec_key" android:defaultValue="@string/camera_video_codec_default_value" android:dialogTitle="@string/camera_video_codec_title" android:entryValues="@array/video_codec_values" camera:entrySummaries="@array/video_codec_summaries" />
    </com.color.support.preference.ColorPreferenceCategory>
    <com.color.support.preference.ColorPreferenceCategory android:key="pref_restore_function" camera:isFirstCategory="false">
        <Preference android:persistent="false" android:layout="@layout/color_preference_yellow" android:title="@string/camera_setting_restore_default" android:selectable="true" android:key="pref_restore_key" />
    </com.color.support.preference.ColorPreferenceCategory>
    <Preference android:layout="@layout/color_preference_bottom_divider" android:selectable="false" android:key="pref_bottom_line" />
</androidx.preference.PreferenceScreen>